--- a/composer.json
+++ b/composer.json
@@ -10,5 +10,8 @@
         }
     ],
     "minimum-stability": "dev",
-    "require": {}
+    "require": {
+        "ext-json": "*",
+        "nesbot/carbon": "3.x-dev"
+    }
 }
