feat: add services that provide most of the logic

--- a/payday.services.yml
+++ b/payday.services.yml
@@ -1,3 +1,6 @@
 services:
-  payday.calculate:
-    class: Drupal\payday\Calculate
+  payday.output:
+    class: Drupal\payday\Services\PaydayOutput
+
+  payday.payday:
+    class: Drupal\payday\Services\Payday
