chore: add drush as a dependency

--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
     "minimum-stability": "dev",
     "require": {
         "ext-json": "*",
-        "nesbot/carbon": "3.x-dev"
+        "nesbot/carbon": "3.x-dev",
+        "drush/drush": "11.x-dev"
     }
 }
